popup-links.css : Popup towards the "inside" of the page to prevent scrollcontent on the forums to cut off the popup
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@10117 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/resources/css/popup-links.css
+++ b/content/resources/css/popup-links.css
@@ -39,10 +39,14 @@ html[data-theme="simple"] ul.ft-popup-list {
 }
 
 html[dir="ltr"] ul.ft-popup-list {
-	left:10px;
+	right: 0px;
+	left: initial;
+	left: -moz-initial;
 }
 html[dir="rtl"] ul.ft-popup-list {
-	right:10px;
+	left: 0px;
+	right: initial;
+	right: -moz-initial;
 }
 
 /* just not in messages*/
